--- a/Myproject2/Assembly-CSharp.csproj
+++ b/Myproject2/Assembly-CSharp.csproj
@@ -61,8 +61,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Code\DamagePopup.cs" />
+    <Compile Include="Assets\Code\EnemyHealth.cs" />
     <Compile Include="Assets\Code\EnemyTypeone.cs" />
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
+    <Compile Include="Assets\Code\PlayerHealth.cs" />
     <Compile Include="Assets\Code\PlayerControl.cs" />
   </ItemGroup>
   <ItemGroup>
