--- a/Myproject2/Assembly-CSharp.csproj
+++ b/Myproject2/Assembly-CSharp.csproj
@@ -60,6 +60,7 @@
     <Analyzer Include="D:\UNITY\2022.3.22f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Code\PlayerPower.cs" />
     <Compile Include="Assets\Code\DamagePopup.cs" />
     <Compile Include="Assets\Code\EnemyHealth.cs" />
     <Compile Include="Assets\Code\EnemyTypeone.cs" />
