--- a/Myproject2/Assembly-CSharp.csproj
+++ b/Myproject2/Assembly-CSharp.csproj
@@ -63,16 +63,20 @@
     <Compile Include="Assets\Code\PlayerPower.cs" />
     <Compile Include="Assets\Code\ParallaxEffect.cs" />
     <Compile Include="Assets\Code\EnemyTypeTwo.cs" />
+    <Compile Include="Assets\Code\BossEnemyHealth.cs" />
     <Compile Include="Assets\Code\DamagePopup.cs" />
     <Compile Include="Assets\Code\EnemyHealth.cs" />
     <Compile Include="Assets\Code\EnemyTypeone.cs" />
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
     <Compile Include="Assets\Code\interectobject.cs" />
     <Compile Include="Assets\Code\PlayerHealth.cs" />
+    <Compile Include="Assets\Code\EnemyBoss.cs" />
     <Compile Include="Assets\Code\Spawnmonster.cs" />
     <Compile Include="Assets\Code\changetosave.cs" />
+    <Compile Include="Assets\Code\Bossdata.cs" />
     <Compile Include="Assets\Code\BossRoom.cs" />
     <Compile Include="Assets\Code\Uipausemenu.cs" />
+    <Compile Include="Assets\Code\PlatformController.cs" />
     <Compile Include="Assets\Code\PlayerControl.cs" />
   </ItemGroup>
   <ItemGroup>
